--- a/css/jquerymobile.nativedroid.dark.css
+++ b/css/jquerymobile.nativedroid.dark.css
@@ -11,7 +11,7 @@
 }
 
 .ui-header.ui-bar-b,.ui-footer.ui-bar-b {
-	background-color: #000000;
+	background-color: #a00;
 }
 
 .ui-overlay-b .ui-page-theme-b {
