Changed layout of accessories

--- a/css/jquerymobile.nativedroid.color.red.css
+++ b/css/jquerymobile.nativedroid.color.red.css
@@ -8,10 +8,20 @@
  *  Dark: #FF4444 - FF4444
  *
  */
+.ui-li-divider
+{
+background-color: #aa0000;
 
+}
+
+.ui-li-divider2
+{
+background-color: #777700;
+
+}
 
 .ui-bar-b,.ui-page-theme-b .ui-dialog-contain .ui-title {
-	border-bottom: 2px solid #FF7979;
+	border-bottom: 3px solid #FF7979;
 }
 
 .ui-btn-down-b .ui-btn-inner,.ui-btn-down-b .ui-btn-text .ui-link-inherit,.ui-listview .ui-btn-hover-b,.ui-input-search.ui-page-theme-b {
