--- a/css/jquery.mobile-1.4.2.css
+++ b/css/jquery.mobile-1.4.2.css
@@ -2498,7 +2498,7 @@ button.ui-btn-icon-notext,
 	.ui-field-contain > label ~ [class*="ui-"],
 	.ui-field-contain .ui-controlgroup-controls {
 		float: left;
-		width: 12%;
+		width: 250px;
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		-ms-box-sizing: border-box;
